# utdoc-validator

./: .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  .utdocconfig  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  unit_tests.md
.github/: action.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml  validate-docs.yml
docs/: github-action-usage.md
templates/: unit_tests_template.md
tests/: test_cli.py  test_generate_default_template.py  test_github_clients.py  test_integration.py  test_pr_file_checker.py  test_unit_test_validator.py  test_utils.py
utdoc_validator/: .qprompt.txt  __init__.py  cli.py  constants.py  core.py  generate_default_template.py  github_clients.py  logging_config.py  pr_file_checker.py  unit_test_validator.py  utils.py  validator.py
utdoc_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utdoc_validator/.github/actions/unit-test-validator/: action.yml
utdoc_validator/tests/: test_cli.py  test_pr_file_checker.py  test_unit_test_validator.py
